# beon_tasty_ai

./: .gitignore  Makefile  README.md  pyproject.toml
tastyai/: Makefile  README.md  pyproject.toml
tastyai/doc/: examples.md  methodology.md
tastyai/scripts/: vectorize.py
tastyai/src/: chat.py  image_generator.py  nlp.py  recommendation.py  terminal.py  translator.py  user_profile.py  vectorizer.py
tastyai/tastyai/: chat.py  image_generator.py  nlp.py  recommendation.py  translator.py  user_profile.py  vectorizer.py
